Fixed the vertical alignment bug

--- a/assets/sass/05-modules/lightbox-remodal.scss
+++ b/assets/sass/05-modules/lightbox-remodal.scss
@@ -155,7 +155,7 @@
 	&-wrapper {
 		padding: 10px 10px 0;
 	}
-	&, &-wrapper {
+	&, &-wrapper:after {
 		vertical-align: middle;
 	}
 }
